Update and rename index-2 (2).html to index.html

--- a/index.html
+++ b/index.html
@@ -2413,7 +2413,7 @@
                             };
 
                             // Submit to the form endpoint
-                            fetch('https://submit-form.com/tWkgESpSB', {
+                            fetch('https://submit-form.com/Z4S5rKq6T', {
                                     method: 'POST',
                                     headers: {
                                         'Content-Type': 'application/json',
@@ -2470,7 +2470,7 @@
                             };
 
                             // Submit to the form endpoint
-                            fetch('https://submit-form.com/tWkgESpSB', {
+                            fetch('https://submit-form.com/Z4S5rKq6T', {
                                     method: 'POST',
                                     headers: {
                                         'Content-Type': 'application/json',
@@ -2617,5 +2617,6 @@
                     });
                 </script>
 </body>
+
 
 </html>
